<resources>
    <string name="app_name">CourseAssistantApp</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="student_id">Student ID</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="create_an_account">Don\'t have an account?.</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profil_fotosu">Profil fotosu</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_information">Email Information*</string>
    <string name="account_type">Account Type</string>
    <string name="email">Email*</string>
    <string name="instagram_adress">Instagram Adress</string>
    <string name="name2">Name*</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number*</string>
    <string name="surname2">Surname*</string>
    <string name="twitter_adress">Twitter Adress</string>
    <string name="educational_info">Educational Info</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_course">Add Course</string>
    <string name="group_numbers">Group Numbers</string>
    <string name="course_id">Course ID</string>
    <string name="course_name">Course Name</string>
    <string name="main_instructor">Main Instructor</string>
    <string name="status_attending">Status : Attending</string>
    <string name="title_activity_instructor_couress">InstructorCouress</string>
    <string name="title_activity_fasfasd">fasfasd</string>


</resources>