<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:id="@+id/cardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:text="@string/course_name"
            android:id="@+id/courseName"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:text="@string/course_id"
            android:textStyle="bold"
            android:id="@+id/courseID"
            android:textColor="#FF0000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:text="@string/main_instructor"
            android:textColor="#000000"
            android:id="@+id/mainInstructor" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:text="@string/status_attending"
            android:textColor="#000000"
            android:id="@+id/status" />



    </LinearLayout>


</androidx.cardview.widget.CardView>