<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <TextView
        android:id="@+id/loginView"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"

        android:layout_width="281dp"
        android:layout_height="61dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="172dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/create_an_account"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="84dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/createAccountTextView"
        app:layout_constraintStart_toEndOf="@+id/createAccountTextView"
        app:layout_constraintTop_toTopOf="@+id/createAccountTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgotPasswordView"
        android:layout_width="128dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createAccountTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>